# ticket_hub

./: .env.example  README.md  pyproject.toml  tickethub.postman_collection.json
apps/common/: admin.py  constants.py  consumers.py  models.py
apps/common/migrations/: 0001_initial.py
apps/v1/comments/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/v1/comments/migrations/: 0001_initial.py  0002_initial.py  0003_comment_deleted_at.py  0004_comment_content_rendered_alter_comment_content.py  0005_comment_seen_by.py  0006_alter_comment_seen_by.py
apps/v1/projects/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/v1/projects/migrations/: 0001_initial.py  0002_project_deleted_at_projectinvitation_deleted_at_and_more.py  0003_alter_projectmembership_status.py  0004_project_description_project_status.py  0005_alter_project_title.py  0006_alter_projectinvitation_unique_together.py  0007_alter_projectmembership_status.py  0008_alter_projectinvitation_role_and_more.py
apps/v1/tasks/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/v1/tasks/migrations/: 0001_initial.py  0002_task_deleted_at.py
apps/v1/userprofile/: apps.py  serializers.py  urls.py  views.py
apps/v1/users/: admin.py  apps.py  models.py
apps/v1/users/migrations/: 0001_initial.py  0002_user_profile_picture.py
config/: asgi.py  channels_auth.py  routing.py  settings.py  urls.py  wsgi.py
